--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
   <head>
     <title>Walrus Hide &asp; Show</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+
+    <button type="button" class="btn btn-light" id="day">Day</button>
+    <button type="button" class="btn btn-dark" id="night">Night</button>
+
     <h1>Peek-a-boo</h1>
     <p><strong>Peek-a-boo</strong> is an ancient game riddled in mystery and deceit. Though it appears to be an innocent children's pastime, you may change your mind when you learn of its treacherous history.</p>
 
