--- a/index.html
+++ b/index.html
@@ -7,26 +7,28 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+    <div class="container">
 
-    <button type="button" class="btn btn-light" id="day">Day</button>
-    <button type="button" class="btn btn-dark" id="night">Night</button>
+      <button type="button" class="btn btn-light" id="day">Day</button>
+      <button type="button" class="btn btn-dark" id="night">Night</button>
 
-    <h1>Peek-a-boo</h1>
-    <p><strong>Peek-a-boo</strong> is an ancient game riddled in mystery and deceit. Though it appears to be an innocent children's pastime, you may change your mind when you learn of its treacherous history.</p>
+      <h1>Peek-a-boo</h1>
+      <p><strong>Peek-a-boo</strong> is an ancient game riddled in mystery and deceit. Though it appears to be an innocent children's pastime, you may change your mind when you learn of its treacherous history.</p>
 
-    <div class="hidden">
-      <p>Let's try playing peek-a-boo. <span class="click-show">Click here</span> for a fun surprise!</p>
+      <div class="hidden">
+        <p>Let's try playing peek-a-boo. <span class="click-show">Click here</span> for a fun surprise!</p>
 
+      </div>
+
+      <div class="show">
+        <p>Look at this regal looking MALE walrus <span class="click-hide">Click here</span> to hide him again</p>
+        <img src="img/walrus.jpg">
+      </div>
+
+
+
+      <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
+      <script src="js/scripts.js" type="text/javascript"></script>
     </div>
-
-    <div class="show">
-      <p>Look at this regal looking MALE walrus <span class="click-hide">Click here</span> to hide him again</p>
-      <img src="img/walrus.jpg">
-    </div>
-
-
-
-    <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
-    <script src="js/scripts.js" type="text/javascript"></script>
   </body>
 </html>
