update add highlight and border to paragraph upon click

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
   <body>
     <div class="container">
 
+      <button type="button" class="btn btn-primary" id="default">Default</button>
       <button type="button" class="btn btn-light" id="day">Day</button>
       <button type="button" class="btn btn-dark" id="night">Night</button>
 
       <h1>Peek-a-boo</h1>
-      <p><strong>Peek-a-boo</strong> is an ancient game riddled in mystery and deceit. Though it appears to be an innocent children's pastime, you may change your mind when you learn of its treacherous history.</p>
+
+      <p class="removeHighlight"><strong>Peek-a-boo</strong> is an ancient game riddled in mystery and deceit. Though it appears to be an innocent children's pastime, you may change your mind when you learn of its treacherous history.</p>
+      <p>Show/Hide</p>
+
+      <!-- <p class="other"><strong>Peek-a-boo</strong> is an ancient game riddled in mystery and deceit. Though it appears to be an innocent children's pastime, you may change your mind when you learn of its treacherous history.</p> -->
+
 
       <div class="hidden">
         <p>Let's try playing peek-a-boo. <span class="click-show">Click here</span> for a fun surprise!</p>
