--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
 
       <h1>Peek-a-boo</h1>
 
-      <p class="removeHighlight"><strong>Peek-a-boo</strong> is an ancient game riddled in mystery and deceit. Though it appears to be an innocent children's pastime, you may change your mind when you learn of its treacherous history.</p>
-      <p>Show/Hide</p>
-
-      <!-- <p class="other"><strong>Peek-a-boo</strong> is an ancient game riddled in mystery and deceit. Though it appears to be an innocent children's pastime, you may change your mind when you learn of its treacherous history.</p> -->
+      <p class="paragraph"><strong>Peek-a-boo</strong> is an ancient game riddled in mystery and deceit. Though it appears to be an innocent children's pastime, you may change your mind when you learn of its treacherous history.</p>
 
 
       <div class="hidden">
